# ImageProcessing

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.test  Makefile  README.md  __init__.py  build.sh  conftest.py  docker-compose.dev.yml  docker-compose.yml  image-processing.hcl  main.py  nginx.conf  pyproject.toml  setup_path.py
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: database.py  main.py
backend/api/: __init__.py  image.py  user.py
backend/exceptions/: __init__.py  validation.py
backend/middleware/: auth_middleware.py  rate_limit_middleware.py
backend/models/: image_models.py  user_models.py
backend/services/: auth_service.py  image_service.py  jwt_service.py  rate_limit_service.py
backend/tests/services/: test_jwt_service.py
backend/utils/: __init__.py  clean_images.py  encrypt.py  error_handler.py  file_handler.py  image.py  user.py
data/: app.db
frontend/: app.py  auth.py
frontend/api/: common.py  image.py  user.py
frontend/components/: auth.py  buttons.py  css.py  metrics.py  sections.py  ui.py
frontend/utils/: __init__.py  auth.py  download.py
scripts/: dev.py  docker_deploy.py  production.py  start_backend.py  start_frontend.py  streamlit_deploy.py  test.py
shared/: config.py
shared/models/: common.py
